# serial-io

./: .gitignore  CMakeLists.txt  README.md  async_serial.cpp  async_serial.hpp  basic_serial.cpp  basic_serial.hpp  build.sh  net_core.hpp  sync_serial.cpp  sync_serial.hpp
example/: e1.cpp
io_context/: async_model.cpp  async_model.hpp  managed_io_context.hpp  thread_pooler.cpp  thread_pooler.hpp
